Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11456

corruption in page 1 for big innodb tables in compressed format with mdb encryption

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1.20
    • N/A
    • Backup
    • None

    Description

      Attached mtr test results in following errors during restore:
      161202 11:41:53 [01] Copying ./test/t1.ibd to F:/git/mysql-test/var/tmp/backup/test/t1.ibd
      [01] xtrabackup: Database page corruption detected at page 1, retrying...
      [01] xtrabackup: Database page corruption detected at page 1, retrying...
      161202 11:41:54 >> log scanned up to (21745372)
      ...
      [01] xtrabackup: Error: failed to read page after 10 retries. File ./test/t1.ibd seems to be corrupted.
      [01] xtrabackup: Error: xtrabackup_copy_datafile() failed.
      [01] xtrabackup: Error: failed to copy datafile.

      When I reduce number of rows - test most likely to succeed.
      If remove row_format=compressed from table definition - then always suceeds

      Attachments

        1. xb_compressed_encrypted.opt
          0.4 kB
          Andrii Nikitin
        2. xb_compressed_encrypted.test
          1 kB
          Andrii Nikitin

        Activity

          People

            jplindst Jan Lindström (Inactive)
            anikitin Andrii Nikitin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.