MDEV-11456: corruption in page 1 for big innodb tables in compressed format with mdb encryption

Verify encrypted page checksum using the correct method.